kubernetes/apps/dev/lakekeeper/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lakekeeper
spec:
  hostnames: ["lakekeeper.toskbot.xyz"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: lakekeeper
          namespace: dev
          port: 8181
      matches:
        - path:
            type: PathPrefix
            value: /
